test/files/neg/macro-invalidusage-badargs/Impls_1.scala
// scalac: -language:experimental.macros
import scala.reflect.macros.blackbox.Context

object Impls {
  def foo(c: Context)(x: c.Expr[Int]) = x
}
